[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plcrex"
version = "2.0.0"
requires-python = ">=3.9"
authors = [
  { name="Marcel C. Werner", email="plcrex.info@gmail.com" },
]
description = "PLCreX - Simplification, Transformation, Analysis, and Validation of IEC 61131-3 Programmable Logic Controllers"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Operating System :: Microsoft :: Windows",
]
license = {file = "LICENSE"}
keywords = ["PLC", "SPS", "IEC-61131", "FBD", "ST", "testing", "development", "verification"]
dependencies = [
  "attrs==23.1.0",
  "click==8.1.6",
  "colorama==0.4.5",
  "coverage==6.5.0",
  "coverage-badge==1.1.0",
  "dd==0.5.7",
  "dicttoxml2==2.1.0",
  "elementpath==3.0.2",
  "exceptiongroup==1.2.0",
  "iniconfig==2.0.0",
  "lark==1.1.7",
  "markdown-it-py==3.0.0",
  "mdurl==0.1.2",
  "packaging==23.2",
  "pluggy==1.3.0",
  "pydot==1.4.2",
  "pyeda==0.29.0",
  "Pygments==2.17.2",
  "pyparsing==3.1.1",
  "pytest==7.2.0",
  "rich==13.5.1",
  "termcolor==2.3.0",
  "tomli==2.0.1",
  "typer==0.9.0",
  "typing_extensions==4.8.0",
  "xmlschema==2.1.1",
  "z3-solver==4.12.2.0",
]

[tool.setuptools]
#packages = ["plcrex"]
include-package-data = true

[tool.setuptools.packages]
find = {} # Scan the project directory with the default parameters

[project.urls]
"Homepage" = "https://github.com/marwern/PLCreX"
"Bug Tracker" = "https://github.com/marwern/PLCreX/issues"
